[gd_scene load_steps=24 format=2]

[ext_resource path="res://Shadows/14p shadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=2]
[ext_resource path="res://Enemies/SoftCollision.gd" type="Script" id=3]
[ext_resource path="res://Overlap Detection/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap Detection/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/bat.png" type="Texture" id=6]
[ext_resource path="res://Environment Effects/Blink.gdshader" type="Shader" id=7]
[ext_resource path="res://Sounds/death_sound.tres" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 5.09902

[sub_resource type="CircleShape2D" id=7]
radius = 6.0

[sub_resource type="CircleShape2D" id=8]
radius = 3.16228

[sub_resource type="CircleShape2D" id=9]
radius = 3.0

[sub_resource type="CircleShape2D" id=10]
radius = 81.0062

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
position = Vector2( 0, -16 )
frames = SubResource( 5 )
frame = 4
playing = true

[node name="14pShadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 16 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[node name="SpriteTimer" type="Timer" parent="."]

[node name="SoftCollision" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 260
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2( 0, 16 )
shape = SubResource( 9 )

[node name="Sight" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -16 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 10 )

[node name="Blink" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/play = SubResource( 13 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="SpriteTimer" to="." method="_on_SpriteTimer_timeout"]
[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
